# rustatio

./: .gitattributes  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  LICENSE  README.md  WEB_VERSION.md  docker-compose.yml  mise.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cors-proxy/: worker.js
rustatio-cli/: Cargo.toml
rustatio-cli/src/: cli.rs  main.rs  runner.rs  session.rs
rustatio-cli/src/json/: input.rs  mod.rs  output.rs
rustatio-cli/src/tui/: app.rs  mod.rs
rustatio-core/: Cargo.toml
rustatio-core/src/: config.rs  faker.rs  lib.rs  logger.rs  mod.rs  validation.rs
rustatio-core/src/protocol/: bencode.rs  mod.rs  tracker.rs
rustatio-core/src/torrent/: client.rs  info.rs  mod.rs
rustatio-desktop/: Cargo.toml  tauri.conf.json
rustatio-desktop/icons/: icon.icns
rustatio-desktop/src/: main.rs
rustatio-server/: Cargo.toml
rustatio-server/src/: api.rs  auth.rs  config.rs  log_layer.rs  main.rs  state.rs  watch.rs
rustatio-wasm/: Cargo.toml
rustatio-wasm/src/: lib.rs
scripts/: entrypoint.sh
ui/: eslint.config.js  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/components/: AboutDialog.svelte  AuthPage.svelte  ConfigurationForm.svelte  Controls.svelte  DownloadButton.svelte  Header.svelte  InstanceTabs.svelte  LiveStats.svelte  Logs.svelte  NetworkStatus.svelte  PeerDistribution.svelte  PresetIcon.svelte  ProgressBars.svelte  ProxySettings.svelte  RateGraph.svelte  SessionStats.svelte  SettingsDialog.svelte  Sidebar.svelte  StatusBar.svelte  StopConditions.svelte  ThemeIcon.svelte  TorrentSelector.svelte  TotalStats.svelte  UpdateChecker.svelte  WatchFolder.svelte
ui/src/lib/: api.js  devLog.js  instanceStore.js  themeStore.svelte.js
ui/src/lib/presets/: balanced.json  fast.json  index.js  partial.json  seedbox.json  stealth.json
