[package]
name = "rustatio"
version = "0.1.0"
edition = "2021"
authors = ["Dylann Batisse <dylann.batisse@protonmail.com>"]
description = "Modern BitTorrent ratio faker"
license = "MIT"

[[bin]]
name = "rustatio"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2"

reqwest = { version = "0.12", features = ["gzip", "rustls-tls"], default-features = false }
tokio = { version = "1.48", features = ["full"] }

toml = "0.8"
sha1 = "0.10"
url = "2.5"
rand = "0.9"

log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.dev]
# Faster compilation for development
incremental = true
opt-level = 0

[profile.dev.package."*"]
# Optimize dependencies even in dev mode
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"
incremental = false
