[workspace]
members = ["rustatio-desktop", "rustatio-core", "rustatio-wasm", "rustatio-cli", "rustatio-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Testycro"]
license = "MIT"
repository = "https://github.com/testycro/rustatio"

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"
incremental = false

# WASM-specific optimizations (smaller binary size)
[profile.release.package.rustatio-wasm]
opt-level = "z"
