[package]
name = "rustatio-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Rustatio BitTorrent ratio faker"

[[bin]]
name = "rustatio"
path = "src/main.rs"

[dependencies]
# Core library
rustatio-core = { path = "../rustatio-core", default-features = false, features = ["native"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.48", features = ["full", "signal"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
comfy-table = "7.1"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time formatting
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
