[package]
name = "rustatio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern BitTorrent ratio faker"

[[bin]]
name = "rustatio"
path = "src/main.rs"

[dependencies]
rustatio-core = { path = "../rustatio-core", features = ["native"] }

tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.48", features = ["full"] }

log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
