[package]
name = "rustatio-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server for Rustatio - serves web UI and REST API"

[[bin]]
name = "rustatio-server"
path = "src/main.rs"

[dependencies]
rustatio-core = { path = "../rustatio-core", features = ["native"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
uuid = { version = "1.0", features = ["v4"] }

# HTTP client for network status
reqwest = { version = "0.12", features = ["json"] }

# Include static files at compile time (optional, for single binary)
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
